--- a/public/contact.html
+++ b/public/contact.html
@@ -228,6 +228,6 @@ Our team is ready to assist you with bookings, activities, and travel tips to ma
          <div class="privacy"><a href="/privacy.html">Pravicy Politics</a></div>
       </footer>
 <div id="whatsapp"> <a href="https://wa.me/+212648755461" target="_blank"> <p style='color:#081C2B'>Do you have any questions?<br>Write to us!</p> <img src="/images/greenwhatsapp.svg" height="40px" width="40px" alt="icon"> </a> </div> 
-      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script><script src="/form.js"></script><script src="/js/common.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script><script src="/js/form.js"></script><script src="/js/common.js"></script>
    </body>
 </html> 
