--- a/public/activities/surfing.html
+++ b/public/activities/surfing.html
@@ -164,7 +164,7 @@
         </div>
         <div>
           <label for="program">Activity</label>
-          <select id="program" required style="width:100%;padding:12px;border:1px solid #ccc;border-radius:4px;">
+          <select id="activity" required style="width:100%;padding:12px;border:1px solid #ccc;border-radius:4px;">
             <option value="" disabled selected>Select your program</option>
             <option style="color: #081C2B;" value="Beach Trekking">Beach Trekking</option>
             <option style="color: #081C2B;" value="Mountain Trip">Mountain Trip</option>
