--- a/public/activities/camel-ride.html
+++ b/public/activities/camel-ride.html
@@ -150,7 +150,7 @@
         <div><label for="phone">Phone</label><input type="tel" id="phone" placeholder="Enter your number"></div> 
         <div>
         <label for="clients">Number of Participants</label>
-        <input type="number" id="clients" min="1" placeholder="e.g. 2">
+        <input type="number" id="count" min="1" placeholder="e.g. 2">
       </div>
         <div>
           <label for="program">Program</label>
