Your message here

--- a/public/programs/mount-journey.html
+++ b/public/programs/mount-journey.html
@@ -335,7 +335,7 @@
                      <li><a href="/">Instagram</a></li>
                      <li><a href="https://airbnb.com/">Airbnb</a></li>
                      <li><a href="https://booking.com/">Booking</a></li>
-                     <li><a href="mailto:Sidi Ifnihorizon@gmailcom">Gmail</a></li>
+                     <li><a href="mailto:sidiifniexperience@gmail.com">Gmail</a></li>
                   </ul>
                </nav>
             </div>
@@ -350,7 +350,7 @@
                </dl>
                <dl>
                   <dt class="footer-heading">EMAIL:</dt>
-                  <dd><a href="mailto:Sidi Ifnihorizon@gmailcom">Sidi Ifnihorizon@gmailcom</a></dd>
+                  <dd><a href="mailto:sidiifniexperience@gmail.com">sidiifniexperience@gmail.com</a></dd>
                </dl>
             </address>
          </div>
