--- a/public/contact.html
+++ b/public/contact.html
@@ -201,7 +201,7 @@ Our team is ready to assist you with bookings, activities, and travel tips to ma
                      <li><a href="/">Instagram</a></li>
                      <li><a href="https://airbnb.com/">Airbnb</a></li>
                      <li><a href="https://booking.com/">Booking</a></li>
-                     <li><a href="mailto:Sidi Ifnihorizon@gmailcom">Gmail</a></li>
+                     <li><a href="mailto:sidiifniexperience@gmail.com">Gmail</a></li>
                   </ul>
                </nav>
             </div>
@@ -216,7 +216,7 @@ Our team is ready to assist you with bookings, activities, and travel tips to ma
                </dl>
                <dl>
                   <dt class="footer-heading">EMAIL:</dt>
-                  <dd><a href="mailto:Sidi Ifnihorizon@gmailcom">Sidi Ifnihorizon@gmailcom</a></dd>
+                  <dd><a href="mailto:sidiifniexperience@gmail.com">sidiifniexperience@gmail.com</a></dd>
                </dl>
             </address>
          </div>
