--- a/public/index.html
+++ b/public/index.html
@@ -439,7 +439,7 @@ Face à la mer ,le bruit des vagues le coucher de soleil</p>
                      <li><a href="/">Instagram</a></li>
                      <li><a href="https://airbnb.com/">Airbnb</a></li>
                      <li><a href="https://booking.com/">Booking</a></li>
-                     <li><a href="mailto:Sidi Ifnihorizon@gmailcom">Gmail</a></li>
+                     <li><a href="mailto:sidiifniexperience@gmail.com">Gmail</a></li>
                   </ul>
                </nav>
             </div>
@@ -454,7 +454,7 @@ Face à la mer ,le bruit des vagues le coucher de soleil</p>
                </dl>
                <dl>
                   <dt class="footer-heading">EMAIL:</dt>
-                  <dd><a href="mailto:Sidi Ifnihorizon@gmailcom">Sidi Ifnihorizon@gmailcom</a></dd>
+                  <dd><a href="mailto:sidiifniexperience@gmail.com">sidiifniexperience@gmail.com</a></dd>
                </dl>
             </address>
          </div>
