--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
         </div>
         <div class="added-infos">
             <p class="added-btn">2 Persons</p>
-            <p class="added-btn">Price: 1000 DH</p>
+            <p class="added-btn">Price: 100 $</p>
         </div>
     </div>
                      </article>
@@ -162,7 +162,7 @@
         </div>
         <div class="added-infos">
             <p class="added-btn">2 Persons</p>
-            <p class="added-btn">Price: 7150 DH</p>
+            <p class="added-btn">Price: 150 $</p>
         </div>
     </div>
                      </article>
@@ -182,7 +182,7 @@
         </div>
         <div class="added-infos">
             <p class="added-btn">2 Persons</p>
-            <p class="added-btn">Price: 1400 DH</p>
+            <p class="added-btn">Price: 140 $</p>
         </div>
     </div>
                      </article>
@@ -202,7 +202,7 @@
         </div>
         <div class="added-infos">
             <p class="added-btn">2 Persons</p>
-            <p class="added-btn">Price: 1500 DH</p>
+            <p class="added-btn">Price: 250 $</p>
         </div>
     </div>
                      </article> 
