--- a/public/programs.html
+++ b/public/programs.html
@@ -92,7 +92,7 @@
                         <div class="stay-content">
                            <div class="stay-price">
                               <div class="stay-price-title">Client’s pick</div>
-                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">1000 DH</div>
+                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">100 $</div>
                            </div> 
                            <div class="stay-informations">
                               <h3>Local Journey</h3>
@@ -126,7 +126,7 @@
                         <div class="stay-content">
                            <div class="stay-price">
                               <div class="stay-price-title">Client’s pick</div>
-                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">7150 DH</div>
+                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">150 $</div>
                            </div> 
                            <div class="stay-informations">
                               <h3>Sidi Ifni Journey</h3>
@@ -160,7 +160,7 @@
                         <div class="stay-content">
                            <div class="stay-price">
                               <div class="stay-price-title">Client’s pick</div>
-                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">1400 DH</div>
+                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">140 $</div>
                            </div> 
                            <div class="stay-informations">
                               <h3>Mount Journey</h3>
@@ -194,7 +194,7 @@
                         <div class="stay-content">
                            <div class="stay-price">
                               <div class="stay-price-title">Client’s pick</div>
-                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">1500 DH</div>
+                              <div style="padding: 8px 8px;font-family: Instrument Sans;font-weight: 700;">250 $</div>
                            </div> 
                            <div class="stay-informations">
                               <h3>Journey to White Beach</h3>
