--- a/public/programs/local-journey.html
+++ b/public/programs/local-journey.html
@@ -7,15 +7,15 @@
       <meta name="description" content="Enjoy a local journey in Sidi Ifni for 2 people with breakfast, dinner, and a stay at Beach View Auberge. Visit the famous cave and the iconic Lion Cliff.">
       <meta content="Enjoy a local journey in Sidi Ifni for 2 people with breakfast, dinner, and a stay at Beach View Auberge. Visit the famous cave and the iconic Lion Cliff." property="og:description">
       <meta content="Enjoy a local journey in Sidi Ifni for 2 people with breakfast, dinner, and a stay at Beach View Auberge. Visit the famous cave and the iconic Lion Cliff." property="twitter:description">
-      <meta content="Local Journey Sidi Ifni – Cave Visit & Lion Cliff | 1000 DH" property="twitter:title">
-      <meta content="Local Journey Sidi Ifni – Cave Visit & Lion Cliff | 1000 DH" property="og:title">
+      <meta content="Local Journey Sidi Ifni – Cave Visit & Lion Cliff | 100 $" property="twitter:title">
+      <meta content="Local Journey Sidi Ifni – Cave Visit & Lion Cliff | 100 $" property="og:title">
       <meta property="og:image" content="/images/socialMedia.webp">
       <meta name="twitter:image" content="/images/socialMedia.webp">
       <link rel="icon" type="image/png" href="/images/favicon.png">
       <link rel="stylesheet" href="/css/main.css">
       <link rel="stylesheet" href="/css/activities.css">
       <link rel="stylesheet" href="/css/mainBigScreen.css" media="screen and (min-width: 990px)">
-      <title>Local Journey Sidi Ifni – Cave Visit & Lion Cliff | 1000 DH</title>
+      <title>Local Journey Sidi Ifni – Cave Visit & Lion Cliff | 100 $</title>
    </head>
    <body>
       <header class="activities">
@@ -86,7 +86,7 @@
   </div>
   <div class="added-infos">
     <p class="added-btn">2 Persons</p>
-    <p class="added-btn">Price: 1000 DH</p>
+    <p class="added-btn">Price: 100 $</p>
   </div>
   <div><a href="/contact.html" class="btn hover-btn">BOOK YOUR JOURNEY</a></div>
 </div>
@@ -112,7 +112,7 @@
   </p>
 </div>
 <div class="reservation-options">
-      <p style="font-weight: 500;margin-bottom: 1rem;">Price: 1000 DH</p>
+      <p style="font-weight: 500;margin-bottom: 1rem;">Price: 100 $</p>
       <div class="reservation-links">
          <a href="#booking-form" style="background: #e8e0f0;color: #081C2B;">SEND REQUEST</a>
          <a href="" style="background: #eb6664;"><svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="19" height="20" viewBox="0 0 19 20" fill="none">
