--- a/public/activities/fishing.html
+++ b/public/activities/fishing.html
@@ -86,7 +86,7 @@
   </div>
   <div class="added-infos">
     <p class="added-btn">2 Persons</p>
-    <p class="added-btn">Price: 600 DH</p>
+    <p class="added-btn">Price: 60 $</p>
   </div>
   <div><a href="/contact.html" class="btn hover-btn">BOOK YOUR FISHING TRIP</a></div>
 </div>
@@ -138,7 +138,7 @@
 <div class="additionnal-infos-two">
     <h2>NOTES</h2>
     <p>
-      Suitable for all levels. Wear comfortable clothes and bring sun protection. This activity is designed for 1 person and costs <strong>600 DH</strong>.
+      Suitable for all levels. Wear comfortable clothes and bring sun protection. This activity is designed for 1 person and costs <strong>60 $</strong>.
     </p>
 </div>
 <div class="booking-form" id="booking-form">
