Your message here

--- a/public/contact.html
+++ b/public/contact.html
@@ -138,7 +138,7 @@ Our team is ready to assist you with bookings, activities, and travel tips to ma
     <div class="booking-form-container">
       <h3 class="blur-animation"><em>Reserve Your Program</em></h3>
       <p>We’ll confirm your booking within 24 hours. Email: <strong>sidiifniexperience@gmail.com</strong> | Instagram: <strong>@sidi_ifni_experience</strong>.</p>
-      <form action=""> 
+      <form action="" id="reservation-form"> 
         <div><label for="name">Name</label><input type="text" id="name" placeholder="Name"></div>
         <div><label for="email">Email</label><input type="email" id="email" placeholder="Enter your email"></div>
         <div><label for="phone">Phone</label><input type="tel" id="phone" placeholder="Enter your number"></div> 
