Your message here

--- a/public/programs.html
+++ b/public/programs.html
@@ -302,10 +302,9 @@
                <nav class="social footer-nav" aria-label="Footer navigation - Social">
                   <h2 class="footer-heading">SOCIAL</h2>
                   <ul>
-                     <li><a href="/">Facebook</a></li>
-                     <li><a href="/">Instagram</a></li>
-                     <li><a href="https://airbnb.com/">Airbnb</a></li>
-                     <li><a href="https://booking.com/">Booking</a></li>
+                     <li><a href="https://web.facebook.com/profile.php?id=61584736284464">Facebook</a></li>
+                     <li><a href="https://www.instagram.com/sidi_ifni_experience/">Instagram</a></li>
+                     <li><a href="https://airbnb.com/">Airbnb</a></li> 
                      <li><a href="mailto:sidiifniexperience@gmail.com">Gmail</a></li>
                   </ul>
                </nav>
