Your message here

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                <ul>
                   <li><a href="/">Home</a></li>
                   <li><a href="/about.html">About</a></li>
-                  <li><a href="/programs.html">PROGRAMS</a></li>
+                  <li><a href="/programs.html">Programs</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                </ul>
             </div>
@@ -427,7 +427,7 @@ Face à la mer ,le bruit des vagues le coucher de soleil</p>
                   <ul>
                      <li><a href="/">Home</a></li>
                      <li><a href="/about.html">About</a></li>
-                     <li><a href="/programs.html">PROGRAMS</a></li>
+                     <li><a href="/programs.html">Programs</a></li>
                      <li><a href="/activities.html">Activities</a></li>
                      <li><a href="/contact.html">Contact</a></li>
                   </ul>
