--- a/public/programs/local-journey.html
+++ b/public/programs/local-journey.html
@@ -79,7 +79,7 @@
     <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M10.6654 5.9987L1.9987 5.9987M5.9987 10.6654L1.33203 5.9987L5.9987 1.33203" stroke="white" stroke-opacity="0.64" stroke-width="1.5" stroke-linecap="square"></path>
     </svg>
-    <a class="small-text" href="/programs.html">BACK TO THE PROGRAMS</a>
+    <a class="small-text" href="/programs.html">BACK TO THE Programs</a>
   </div>
   <div>
     <h1 class="big-heading blur-animation">Local Journey in Sidi Ifni – Cave & Lion Cliff</h1>
@@ -322,7 +322,7 @@
                   <ul>
                      <li><a href="/">Home</a></li>
                      <li><a href="/about.html">About</a></li>
-                     <li><a href="/programs.html">PROGRAMS</a></li>
+                     <li><a href="/programs.html">Programs</a></li>
                      <li><a href="/activities.html">Activities</a></li>
                      <li><a href="/contact.html">Contact</a></li>
                   </ul>
