--- a/public/activities.html
+++ b/public/activities.html
@@ -69,7 +69,7 @@
                <ul>
                   <li><a href="/">Home</a></li>
                   <li><a href="/about.html">About</a></li>
-                  <li><a href="/programs.html">PROGRAMS</a></li>
+                  <li><a href="/programs.html">Programs</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                </ul>
             </div>
@@ -224,7 +224,7 @@ Short or extended rides</p>
                   <ul>
                      <li><a href="/">Home</a></li>
                      <li><a href="/about.html">About</a></li>
-                     <li><a href="/programs.html">PROGRAMS</a></li>
+                     <li><a href="/programs.html">Programs</a></li>
                      <li><a href="/activities.html">Activities</a></li>
                      <li><a href="/contact.html">Contact</a></li>
                   </ul>
