--- a/public/activities/fishing.html
+++ b/public/activities/fishing.html
@@ -69,7 +69,7 @@
                <ul>
                   <li><a href="/">Home</a></li>
                   <li><a href="/about.html">About</a></li>
-                  <li><a href="/programs.html">PROGRAMS</a></li>
+                  <li><a href="/programs.html">Programs</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                </ul>
             </div>
@@ -259,7 +259,7 @@
                   <ul>
                      <li><a href="/">Home</a></li>
                      <li><a href="/about.html">About</a></li>
-                     <li><a href="/programs.html">PROGRAMS</a></li>
+                     <li><a href="/programs.html">Programs</a></li>
                      <li><a href="/activities.html">Activities</a></li>
                      <li><a href="/contact.html">Contact</a></li>
                   </ul>
