--- a/public/contact.html
+++ b/public/contact.html
@@ -69,7 +69,7 @@
                <ul>
                   <li><a href="/">Home</a></li>
                   <li><a href="/about.html">About</a></li>
-                  <li><a href="/programs.html">PROGRAMS</a></li>
+                  <li><a href="/programs.html">Programs</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                </ul>
             </div>
@@ -189,7 +189,7 @@ Our team is ready to assist you with bookings, activities, and travel tips to ma
                   <ul>
                      <li><a href="/">Home</a></li>
                      <li><a href="/about.html">About</a></li>
-                     <li><a href="/programs.html">PROGRAMS</a></li>
+                     <li><a href="/programs.html">Programs</a></li>
                      <li><a href="/activities.html">Activities</a></li>
                      <li><a href="/contact.html">Contact</a></li>
                   </ul>
