Your message here

--- a/public/activities.html
+++ b/public/activities.html
@@ -156,7 +156,7 @@ Short or extended rides</p>
                      <article class="tour-informations">
                         <div class="tours-infos-container">
                            <div class="tour-img"><a href="/activities/berber-house.html"><img src="./images/tajine_950.webp" alt="a tajine" 
-                            srcset="./images/tajine_550.webp 550w,./images/tajine_650.webp 650w, ./images/tajine_800.webp 800w, ./images/tajine_950.webp 950w"><a href="/activities/fishing.html" class="btn explore hover-btn tours-btn">SHOW DETAILS</a></a></div>
+                            srcset="./images/tajine_550.webp 550w,./images/tajine_650.webp 650w, ./images/tajine_800.webp 800w, ./images/tajine_950.webp 950w"><a href="/activities/berber-house.html" class="btn explore hover-btn tours-btn">SHOW DETAILS</a></a></div>
                            <div class="tour-title">
                               <h4>Dining experience at Amazigh House</h4>
                               <p>Enjoy an authentic Amazigh dining experience in Sidi Ifni, sharing a traditional lunch or dinner in a local home filled with warmth and culture.</p>
