Your message here

--- a/public/activities/berber-house.html
+++ b/public/activities/berber-house.html
@@ -198,6 +198,19 @@
 </div>
 
                <div class="tours-section-content"> 
+                <article class="tour-informations">
+                        <div class="tours-infos-container">
+                           <div class="tour-img"><a href="/activities/beach-trekking"><img src="../images/beach-trekking.webp" srcset="../images/beach-trekking_800.webp 800w,../images/beach-trekking_950.webp 950w, ../images/beach-trekking.webp 1120w " alt="2 mens walking in the beach"></a><a class="btn explore hover-btn tours-btn" href="/activities/beach-trekking">SHOW DETAILS</a></div>
+                           <div class="tour-title">
+                              <h4>Beach Trekking</h4>
+                              <p>Walk along Sidi Ifni’s red arches and golden sands while enjoying stunning ocean views and peaceful moments by the sea.</p>
+                           </div>
+                           <div class="added-infos">
+                              <p class="added-btn">Guided or self-paced</p>
+            <p class="added-btn">Ideal for nature lovers</p>
+                           </div>
+                        </div>
+                     </article>
                      <article class="tour-informations">
                         <div class="tours-infos-container">
                            <div class="tour-img"><a href="/activities/mountain-trip.html"><img src="../images/mountain-trip.webp" alt="mountain trip" srcset="../images/mountain-trip_450.jpg 450w,../images/mountain-trip_550.jpg 550w, ../images/mountain-trip_650.jpg 650w,../images/mountain-trip_800.jpg 800w, ../images/mountain-trip.webp 950w">
