--- a/public/activities/beach-trekking.html
+++ b/public/activities/beach-trekking.html
@@ -206,6 +206,19 @@
             <p class="added-btn">All difficulty levels</p>
                            </div>
                         </div>
+                     </article>
+                     <article class="tour-informations">
+                        <div class="tours-infos-container">
+                           <div class="tour-img"><a href="/activities/berber-house.html"><img src="../images/tajine_950.webp" srcset="../images/tajine_550.webp 550w,../images/tajine_650.webp 650w,../images/tajine_800.webp 800w,../images/tajine_950.webp 950w" alt="a morocan tajine"></a><a class="btn explore hover-btn tours-btn" href="/activities/berber-house.html">SHOW DETAILS</a></div>
+                           <div class="tour-title">
+                              <h4>Dining experience at Amazigh House</h4>
+                              <p>Enjoy an authentic Amazigh dining experience in Sidi Ifni, sharing a traditional lunch or dinner in a local home filled with warmth and culture.</p>
+                           </div>
+                           <div class="added-infos">
+                              <p class="added-btn">Single or Groupes</p>
+            <p class="added-btn">Beginners & enthusiasts welcome</p>
+                           </div>
+                        </div>
                      </article> 
                      <article class="tour-informations">
                         <div class="tours-infos-container">
