--- a/public/activities/mountain-trip.html
+++ b/public/activities/mountain-trip.html
@@ -208,6 +208,19 @@
                      </article>  
                      <article class="tour-informations">
                         <div class="tours-infos-container">
+                           <div class="tour-img"><a href="/activities/berber-house.html"><img src="../images/tajine_950.webp" srcset="../images/tajine_550.webp 550w,../images/tajine_650.webp 650w,../images/tajine_800.webp 800w,../images/tajine_950.webp 950w" alt="a morocan tajine"></a><a class="btn explore hover-btn tours-btn" href="/activities/berber-house.html">SHOW DETAILS</a></div>
+                           <div class="tour-title">
+                              <h4>Dining experience at Amazigh House</h4>
+                              <p>Enjoy an authentic Amazigh dining experience in Sidi Ifni, sharing a traditional lunch or dinner in a local home filled with warmth and culture.</p>
+                           </div>
+                           <div class="added-infos">
+                              <p class="added-btn">Single or Groupes</p>
+            <p class="added-btn">Beginners & enthusiasts welcome</p>
+                           </div>
+                        </div>
+                     </article> 
+                     <article class="tour-informations">
+                        <div class="tours-infos-container">
                            <div class="tour-img"><a href="/activities/camel-ride.html"><img src="../images/camel-ride.webp" srcset=" ../images/camel-ride_650.webp 650w,  ../images/camel-ride_800.webp 800w " alt="a groupe riding amel in the beach"></a><a href="/activities/camel-ride.html" class="btn explore hover-btn tours-btn">SHOW DETAILS</a></div>
                            <div class="tour-title">
                               <h4>Camel Ride</h4>
