Add JSON-LD schema for Taxis To Marrakech

--- a/public/activities/berber-house.html
+++ b/public/activities/berber-house.html
@@ -20,7 +20,7 @@
    <body>
       <header class="activities">
          <p class="notification">Welome to Sidi Ifni Experience <img src="../images/moving-hand.gif" style="margin-left: 5px;" width="32" height="32" alt="moving hand"></p>
-         <div class="header-container camelRide">
+         <div class="header-container diningExperience">
             <nav>
                <div class="menu-btn">
                   <button class="custom-svg-btn" aria-label="Open menu" aria-controls="main-menu" aria-expanded="false">
