--- a/public/activities/berber-house.html
+++ b/public/activities/berber-house.html
@@ -124,7 +124,7 @@
   </div>
   <div class="main-activity-img">
     <img src="/images/tajine.webp" alt="People trekking from Legzira to Sidi Ifni along the Atlantic coast" 
-    srcset="./images/tajine_550.webp 550w,./images/tajine_650.webp 650w, ./images/tajine_800.webp 800w, ./images/tajine_950.webp 950w, /images/tajine_1080.webp 1080w, /images/tajine_1250.webp 1250w, /images/tajine.webp 1450w">
+    srcset="/images/tajine_550.webp 550w,/images/tajine_650.webp 650w, /images/tajine_800.webp 800w, /images/tajine_950.webp 950w, /images/tajine_1080.webp 1080w, /images/tajine_1250.webp 1250w, /images/tajine.webp 1450w">
   </div>
 
   <div class="additionnal-infos">
