--- a/public/activities/berber-house.html
+++ b/public/activities/berber-house.html
@@ -70,6 +70,7 @@
                   <li><a href="/">Home</a></li>
                   <li><a href="/about.html">About</a></li>
                   <li><a href="/programs.html">Programs</a></li>
+                  <li><a href="/activities.html">Activities</a></li>
                   <li><a href="/contact.html">Contact</a></li>
                </ul>
             </div>
